--- a/VideoPlayerOfflineDownload/Video List/View/VideoListTVC.xib
+++ b/VideoPlayerOfflineDownload/Video List/View/VideoListTVC.xib
@@ -19,14 +19,14 @@
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="U0l-SZ-iJH">
                         <rect key="frame" x="16" y="17" width="334" height="67"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dYt-Li-yAi" userLabel="VideoNameLbl">
-                                <rect key="frame" x="0.0" y="0.0" width="334" height="21.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dYt-Li-yAi" userLabel="VideoNameLbl">
+                                <rect key="frame" x="0.0" y="0.0" width="334" height="17"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zhk-gW-dG2">
-                                <rect key="frame" x="0.0" y="21.5" width="334" height="45.5"/>
+                                <rect key="frame" x="0.0" y="17" width="334" height="50"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                 <color key="textColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -41,7 +41,7 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="le7-IU-c4h" customClass="CircularProgressbarView" customModule="VideoPlayerOfflineDownload" customModuleProvider="target">
-                        <rect key="frame" x="360" y="28.5" width="44" height="44"/>
+                        <rect key="frame" x="360" y="24" width="44" height="44"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="9st-Wh-LCX"/>
@@ -49,7 +49,7 @@
                         </constraints>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="osh-St-9nk">
-                        <rect key="frame" x="360" y="28.5" width="44" height="44"/>
+                        <rect key="frame" x="360" y="24" width="44" height="44"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="44" id="I2E-dy-caM"/>
                             <constraint firstAttribute="height" constant="44" id="RmI-y7-67c"/>
@@ -66,8 +66,8 @@
                     <constraint firstItem="mTO-JK-xwi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="7E0-uc-Chr"/>
                     <constraint firstAttribute="trailing" secondItem="le7-IU-c4h" secondAttribute="trailing" constant="10" id="Bcd-RA-6EN"/>
                     <constraint firstAttribute="trailing" secondItem="mTO-JK-xwi" secondAttribute="trailing" id="J29-Pm-eHk"/>
+                    <constraint firstItem="le7-IU-c4h" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-5" id="Q2I-hW-TkN"/>
                     <constraint firstAttribute="bottom" secondItem="mTO-JK-xwi" secondAttribute="bottom" id="Y19-bt-qNW"/>
-                    <constraint firstItem="le7-IU-c4h" firstAttribute="centerY" secondItem="U0l-SZ-iJH" secondAttribute="centerY" id="fJL-jc-FfL"/>
                     <constraint firstItem="osh-St-9nk" firstAttribute="leading" secondItem="U0l-SZ-iJH" secondAttribute="trailing" constant="10" id="fyj-F4-jod"/>
                     <constraint firstAttribute="trailing" secondItem="osh-St-9nk" secondAttribute="trailing" constant="10" id="mRE-4C-BhF"/>
                     <constraint firstItem="U0l-SZ-iJH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="mmC-gO-Yzk"/>
